fix: endpoints urls
